--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="wrap">
         <div id="header">
             <div class="container">
-                <h1>PORTFOLIO</h1>
+                <h1><a href="#main">PORTFOLIO</a></h1>
                 <div class="nav">
                     <ul>
                         <li><a href="#main">Main</a></li>
